app/index.css
@font-face {
  font-family: 'SangBleu Republic';
  src: url('./layout/sang-bleu/SangBleuRepublic-Regular-WebM.woff2')
      format('woff2'),
    url('./layout/sang-bleu/SangBleuRepublic-Regular-WebM.woff') format('woff');
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  box-sizing: border-box;
  padding: 35px;

  font: 24px/100% 'SangBleu Republic', 'Times New Roman', times, serif;
}

.container {
  display: flex;
  flex-direction: column;
}

header,
main,
footer {
  max-width: 550px;
}

main {
  flex-shrink: 0;
  flex-grow: 1;
}

a {
  color: rgb(55, 41, 158);
  text-decoration: none;
  transition: color 250ms cubic-bezier(0.19, 1, 0.22, 1);
}

a:hover {
  color: rgba(55, 41, 158, 0.75);
}

a.active {
  color: inherit;
  cursor: default;
}

h1 {
  font-size: 24px;
  font-weight: normal;
  line-height: 140%;
  margin: 0 0 25px;
}

p {
  line-height: 140%;
  margin: 0 0 25px;
}

footer {
  flex-grow: 0;
  flex-shrink: 0;
}

footer ul {
  margin: 0;
  padding: 0;
}

footer ul li {
  display: inline-block;
}

footer ul li:after {
  content: '';

  display: inline-block;
  width: 8px;
  height: 8px;
  margin: auto 15px 2px;
  border: 1px solid black;
  border-radius: 8px;
}

footer ul li:last-child:after {
  content: none;
}

